--- a/05_world_cup-covered.ipynb
+++ b/05_world_cup-covered.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# my guess\n",
+    "# france wins by 70%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,10 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from math import factorial\n",
+    "# from scipy.special import factorial\n",
+    "\n",
     "def likelihood(data, hypo):\n",
     "    \"\"\"Likelihood function for World Cup\n",
     "    \n",
@@ -163,21 +176,40 @@
     "    returns: float probability\n",
     "    \"\"\"\n",
     "    # TODO: fill this in!\n",
-    "    return 1"
+    "    k = data\n",
+    "    lam = hypo\n",
+    "    \n",
+    "    like = (lam ** k) * np.exp(-lam) / factorial(k)\n",
+    "    return like"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "from scipy.stats import poisson\n",
+    "\n",
+    "# Solution goes here\n",
+    "def likelihood(data, hypo):\n",
+    "    \"\"\"Likelihood function for World Cup\n",
+    "    \n",
+    "    data: integer number of goals in a game\n",
+    "    hypo: goal scoring rate in goals per game\n",
+    "    \n",
+    "    returns: float probability\n",
+    "    \"\"\"\n",
+    "    # TODO: fill this in!\n",
+    "    k = data\n",
+    "    lam = hypo\n",
+    "    \n",
+    "    return poisson.pmf(k, lam)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,20 +298,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "sample_croatia = croatia.choice(size=1000)\n",
+    "sample_croatia.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "np.sum(sample_france > sample_croatia)"
    ]
   },
   {
@@ -306,11 +341,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sample_france : distribution of lambda's for france\n",
+    "#                 given 4 goals prior, gives 1000 choices (simulations), gives lambda."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "goals_france = np.random.poisson(sample_france)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goals_france"
    ]
   },
   {
@@ -322,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,11 +421,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "goals_croatia = np.random.poisson(sample_croatia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here\n",
+    "pmf_croatia = Pmf.from_seq(goals_croatia)\n",
+    "pmf_croatia.bar(label='croatia')\n",
+    "decorate_goals('Predictive distribution')\n",
+    "plt.legend()\n",
+    "\n",
+    "goals_croatia.mean()"
    ]
   },
   {
@@ -390,29 +459,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "# Solution\n",
+    "\n",
+    "np.mean(goals_croatia > goals_france)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "# Solution\n",
+    "\n",
+    "np.mean(goals_france > goals_croatia)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "# Solution\n",
+    "\n",
+    "np.mean(goals_france == goals_croatia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MCMC\n",
+    "# monte carlo markov chain"
    ]
   },
   {
@@ -439,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
