--- a/02_dice-covered.ipynb
+++ b/02_dice-covered.ipynb
@@ -245,24 +245,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def likelihood_dice(data, hypo):\n",
-    "    \"\"\"Likelihood function for the dice problem.\n",
+    "# def likelihood_dice(data, hypo):\n",
+    "#     \"\"\"Likelihood function for the dice problem.\n",
     "    \n",
-    "    data: outcome of the die roll\n",
-    "    hypo: number of sides\n",
+    "#     data: outcome of the die roll\n",
+    "#     hypo: number of sides\n",
     "    \n",
-    "    returns: float probability\n",
-    "    \"\"\"\n",
-    "    # TODO: fill this in!\n",
-    "    return 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#     returns: float probability\n",
+    "#     \"\"\"\n",
+    "#     # TODO: fill this in!\n",
+    "#     return 1\n",
+    "\n",
     "# Solution goes here\n",
     "def likelihood_dice(data, hypo):\n",
     "    \"\"\"Likelihood function for the dice problem.\n",
@@ -636,6 +629,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
